# experiment-langchain-agent

./: .env.example  .gitignore  README.md  pyproject.toml
src/experiment_langchain_agent/agent/: agent_factory.py  llm_factory.py  main.py  tools_factory.py
src/experiment_langchain_agent/index/: database_factory.py  ingest.py
